--- a/my-server-app-jakub/.github/workflows/sonar.yml
+++ b/my-server-app-jakub/.github/workflows/sonar.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2
-          key: \${{ runner.os }}-m2-\${{ hashFiles('**/pom.xml') }}
-          restore-keys: \${{ runner.os }}-m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
 
       - name: Build and analyze
-        run: mvn clean verify sonar:sonar -Dsonar.projectKey=my-server-app-jakub -Dsonar.organization=twoja-organizacja -Dsonar.token=\${{ secrets.SONAR_TOKEN }}
+        run: mvn clean verify sonar:sonar -Dsonar.projectKey=my-server-app-jakub -Dsonar.organization=twoja-organizacja -Dsonar.token=${{ secrets.SONAR_TOKEN }}
