--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -26,4 +26,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build and analyze
-        run: mvn clean verify sonar:sonar -Dsonar.projectKey=my-server-app-jakub -Dsonar.organization=opalinskijakub -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+        run: mvn clean verify sonar:sonar \
+          -Dsonar.projectKey=my-server-app-jakub \
+          -Dsonar.organization=opalinskijakub \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.token=${{ secrets.SONAR_TOKEN }}
