--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -37,4 +37,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=opalinskijakub_my-server-app-jakub
+            -Dsonar.projectKey=opalinskijakub_my-server-app-jakub \
+            -Dsonar.organization=opalinskijakub \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.branch.name=main
